# DTGen

./: .gitignore  README.md  README_ZH.md  main.py  pyproject.toml  similarity_results.txt
docs/: batch_prompt.md  batch_prompt_en.md  filter_unmatched_images.md  filter_unmatched_images_en.md  generate_prompts.md  generate_prompts_en.md  sam.md  sam_en.md
output/: merged_prompts.txt
output/bowl/clean/: bowl_clean_prompts.txt  clean_00001.txt  clean_00002.txt  clean_00003.txt  clean_00005.txt  clean_00006.txt  clean_00007.txt  clean_00008.txt  clean_00009.txt  clean_00010.txt  clean_00011.txt  clean_00012.txt  clean_00013.txt  clean_00014.txt  clean_00015.txt  clean_00016.txt  clean_00017.txt  clean_00018.txt  clean_00019.txt  clean_00020.txt  clean_00021.txt  clean_00022.txt  clean_00023.txt  clean_00024.txt  clean_00025.txt  clean_00026.txt  clean_00027.txt  clean_00028.txt  clean_00029.txt  clean_00030.txt  clean_00031.txt  clean_00032.txt  clean_00033.txt  clean_00034.txt  clean_00035.txt  clean_00036.txt  clean_00037.txt  clean_00038.txt  clean_00039.txt  clean_00041.txt  (+398 more)
output/bowl/heavily_dirty/: bowl_heavily_dirty_prompts.txt  heavily_dirty_00001.txt  heavily_dirty_00002.txt  heavily_dirty_00003.txt  heavily_dirty_00004.txt  heavily_dirty_00005.txt  heavily_dirty_00006.txt  heavily_dirty_00007.txt  heavily_dirty_00008.txt  heavily_dirty_00009.txt  heavily_dirty_00010.txt  heavily_dirty_00011.txt  heavily_dirty_00012.txt  (+438 more)
prompts/: background.yaml  dirtiness_description.yaml  dirtiness_description_origin.yaml  tableware_description.yaml
scripts/: batch_prompt.py  clip_similarity_calculator.py  dishware_dirt_generator.py  filter_unmatched_images.py  generate_dataset.py  generate_prompts.py  process_txt_folders.py  sam.py  text_to_image.py
workflows/: flux_api.json  sd3.5_no_lora.json  sdxl-api.json
(+2693 files in other folders)
